--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bài Cá Nhân</title>
+    <h1>Bài Cá Nhân</h1>
 </head>
 <body>
     <a href = "CV/index.html">Trang CV</a>
